# game_engine_c

./: CMakeLists.txt  main.c
assets/config/: config.ini
assets/shaders/: batch_quad.frag  batch_quad.vert  default.frag  default.vert
dependencies/: linmath.h
dependencies/glad/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
engine/: animation.h  array_list.h  config.h  entity.h  global.c  global.h  io.h  physics.h  render.h  time.h  types.h  util.h
engine/animation/: animation.c
engine/array_list/: array_list.c
engine/config/: config.c
engine/entity/: entity.c
engine/input/: input.c
engine/io/: io.c
engine/physics/: physics.c  physics_internal.h
engine/render/: render.c  render_init.c  render_internal.h  render_util.c
engine/time/: time.c
